apps/home/esphome/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: esphome
spec:
  selector:
    matchLabels:
      app: esphome
  replicas: 1
  template:
    metadata:
      labels:
        app: esphome
    spec:
      containers:
      - name: esphome
        image: esphome/esphome
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /temp/secrets.yaml
          name: secrets
          subPath: secrets.yaml
        - mountPath: /temp/esp-01.yaml
          name: files
          subPath: esp-01.yaml
        - mountPath: /temp/esp-02.yaml
          name: files
          subPath: esp-02.yaml
        - mountPath: /temp/esp-03.yaml
          name: files
          subPath: esp-03.yaml
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "cp /temp/* /config/"]
      volumes:
      - name: files
        configMap:
          name: esphome-files
      - name: secrets
        secret:
          secretName: esphome-secrets
      dnsPolicy: ClusterFirstWithHostNet
      hostNetwork: true
---
apiVersion: v1
kind: Service
metadata:
  name: esphome
spec:
  selector:
    app: esphome
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 6052
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: esphome
spec:
  hostnames:
  - esphome.bgalhardo.local
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: local
    namespace: system
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: esphome
      port: 8080
